crates/org-edit/tests/snapshots/snapshots__set_tags.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* Heading‸ :a:
Text.

----
* Heading‸                                                               :x:y:
Text.
