crates/org-edit/tests/snapshots/snapshots__sort_alpha.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* P‸
** b
** C
** a

----
‸* P
** a
** b
** C
