crates/org-edit/tests/snapshots/snapshots__sort_alpha_reversed.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* P‸
** b
** C
** a

----
‸* P
** C
** b
** a
