crates/org-edit/tests/snapshots/snapshots__sort_numeric.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
* P‸
** b
** C
** a

----
‸* P
** b
** C
** a
