crates/org-edit/tests/snapshots/snapshots__table_insert_column.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
| a | bb |
|-
| 10 | x‸ |
#+TBLFM: $2=$1*2

----
|  a |   | bb |
|----+---+----|
| 10 | ‸  | x  |
#+TBLFM: $3=$1*2
