crates/org-edit/tests/snapshots/snapshots__table_move_column_left.snap
---
source: crates/org-edit/tests/snapshots.rs
expression: "format!(\"{marked}\\n----\\n{out}\")"
---
| a | bb |
|-
| 10 | x‸ |
#+TBLFM: $2=$1*2

----
| bb |  a |
|----+----|
| ‸x  | 10 |
#+TBLFM: $1=$2*2
